--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
     "description": "This extension let you  be part of an activity (topic)",
     "homepage": "http://forumhulp.com",
     "version": "3.1.0",
-    "time": "2015-04-01",
     "keywords": [
         "phpbb",
         "extension",
@@ -27,7 +26,7 @@
     "extra": {
         "display-name": "Participate",
         "soft-require": {
-            "phpbb/phpbb": "3.1.*"
+            "phpbb/phpbb": ">3.1.*"
         },
         "version-check": {
             "host": "forumhulp.com",
