No bots anymore

--- a/config/services.yml
+++ b/config/services.yml
@@ -11,6 +11,7 @@ services:
             - @request
             - @template
             - @user
+            - @auth
             - %forumhulp.participate.tables.participate%
         tags:
             - { name: event.listener }
